# supabase-fdw-ntp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  test_e2e_comprehensive_v030.sql  test_fdw.sql
.github/workflows/: README.md  release.yml  test.yml
docs/endpoints/: README.md  electricity-prices.md  grid-status.md  redispatch.md  renewable-energy.md
docs/guides/: E2E_TESTING_GUIDE.md
docs/reference/: API_SPECIFICATION.md  ARCHITECTURE.md  ETL_LOGIC.md  ROUTING_RULES.md
src/: bindings.rs  csv_parser.rs  csv_utils.rs  error.rs  grid_parsers.rs  lib.rs  oauth2.rs  query_router.rs  transformations.rs  types.rs  types_grid.rs
wit/: world.wit
